menu terminado, agenda lista, falta col-md-2

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Bootstrap: Grid System</title>
+  <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -60,6 +62,11 @@
                 </a>
               </li>
               <li>
+                <a class="nav" href="#"> El Medio Ambiente
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li>
                 <a class="nav" href="#"> Lo que te perdiste </a>
               </li>
               <!-- Single button -->
@@ -74,6 +81,11 @@
                   <li><a href="#">manda tus datos</a></li>
                 </ul>
               </div>
+              <li>
+                <a class="nav" href="img/tumblr_m8nwz4pIMn1qzvlz6o1_500.gif"> Vacio
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
             </ul>
           </nav>
         </div>
@@ -123,7 +135,7 @@
                   Publicado el 25.abr.2016
                 </p>
                   <div class="image">
-                    <img class="image" src="img/tigre-lobo.jpg" alt="">
+                    <img class="image" src="img/stock-vector-pop-art-woman-omg-sign-vector-illustration-242230969.jpg" alt="">
                     <div class="parra">
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam obcaecati earum asperiores facilis praesentium libero nulla repudiandae laborum assumenda minima ipsum atque et, veniam itaque expedita delectus illo! Adipisci, ut!
                     </div>
@@ -159,26 +171,35 @@
               </div>
             </div>
               <div class="row">
-              <div class="col-sm-4">
-                <div class="cajaa">
+                <div class="col-sm-4">
+                  <div class="cajaa">
                   19 de mayo
-                </div><div class="cajaa">
-                  4 Mayo
+                  </div>
+                  <div class="cajaa">
+                    4 Mayo
+                  </div>
+                  <div class="cajaa">
+                    23
+                    Enero
+                  </div>
+                  <div class="cajaa">
+                    23
+                    Enero
+                  </div>
                 </div>
-                <div class="cajaa">
-                  23
-                  Enero
-                </div>
-                <div class="cajaa">
-                  23
-                  Enero
-                </div>
-              </div>
               <div class="col-sm-8">
                 <div class="eventos">
-                  Exposición 50 fotografías que cambiaron el mundo
-                <div class="eventos"> 
-                  Clase Abierta Biodanza
+                  Calvi harris en Chile
+                </div>  
+                <div class="eventos2"> 
+                  The color run
+                </div> 
+                 <div class="eventos">
+                  Calvi harris en Chile
+                </div>  
+                <div class="eventos2"> 
+                  The color run
+                </div>  
               </div>
             </div>
           </div>
