pagina terminada, solo falta solucionar problema de agenda

--- a/index.html
+++ b/index.html
@@ -101,9 +101,6 @@
               Historia destacada
             </h2>
           </div>
-          <h3 class="a">
-            Articulo
-          </h3>
           <p class="publicado">
             Publicado el 28.abr.2016
           </p>
@@ -149,9 +146,9 @@
                 </div>
               </article>
               <div class="raya">
-                 <h3 class="a">
-                  Articulo
-                </h3>
+                 <h2 class="titulo">
+                   OMG!
+                 </h2>
                 <p class="publicado">
                   Publicado el 25.abr.2016
                 </p>
@@ -187,17 +184,18 @@
             </h2>
           </div>
           <div class="cajagrande">
-            <iframe width="640" height="360" src="https://www.youtube.com/embed/OwnUz2hHX3A" frameborder="0" allowfullscreen></iframe>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/OwnUz2hHX3A" frameborder="0" allowfullscreen>
+            </iframe>
             <h2 class="titulo">
               Niño autista en concierto de coldplay 
             </h2>
             <p class="parra">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est quo illo ipsam rem quas labore eius vel animi reprehenderit blanditiis modi illum, accusantium distinctio voluptatem veniam voluptas porro possimus dolores?
             </p>
+          </div>  
+          <div class="agenda">
             <div class="caja2">
-              <div class="hi">
                 Agenda
-              </div>
             </div>
               <div class="row">
                 <div class="col-sm-4">
@@ -232,9 +230,21 @@
               </div>
             </div>
           </div>
-        </div>
+          <div class="raya">
+            <div class="cajagrande">
+              <iframe width="640" height="360" src="https://www.youtube.com/embed/Q9RWmZ_lGlo" frameborder="0" allowfullscreen>
+              </iframe>
+              <h2 class="titulo">
+                Video revelacion
+              </h2>
+              <p class="parra">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam ipsa, rerum dolore velit quia quod aspernatur a beatae ea, magnam rem odit ullam? Voluptatem, hic, officiis. Accusamus voluptatem cum reprehenderit?
+              </p>
+            </div>
+          </div>
+        </div>  
         <div class="col-md-3">
-          <div class="image input-group input-group-lg">
+          <div class="send input-group input-group-lg">
             <span class="input-group-addon" id="sizing-addon1">
               <span class="glyphicon glyphicon-send" aria-hidden="true">
               </span>
@@ -246,7 +256,7 @@
               <li>
                 <div class="raya">
                   <a href="https://www.lds.org/?lang=spa">
-                    <img class="image" src="img/historia-familiar-PS.png" height="250" width="500" alt="">
+                    <img class="image" src="img/historia-familiar-PS.png" height="200" width="500" alt="">
                     <div class="apretar">
                       Solo debes apretar la imagen para ver mas; dale!
                     </div>
@@ -256,7 +266,7 @@
               <li>
                 <div class="raya">
                   <a href="https://www.lds.org/?lang=spa">
-                    <img class="image" src="img/Cerati.jpg" height="250" width="618" alt="">
+                    <img class="image" src="img/Cerati.jpg" height="200" width="618" alt="">
                     <div class="apretar">
                       Solo debes apretar la imagen para ver mas; dale!
                     </div>
@@ -266,7 +276,7 @@
               <li>
                 <div class="raya">
                   <a href="https://www.lds.org/?lang=spa">
-                    <img class="image" src="img/laboratorio-splash.jpg" height="250" width="690" alt="">
+                    <img class="image" src="img/laboratorio-splash.jpg" height="200" width="690" alt="">
                     <div class="apretar">
                       Solo debes apretar la imagen para ver mas; dale!
                     </div>
@@ -276,7 +286,7 @@
               <li>
                 <div class="raya">
                   <a href="https://www.lds.org/?lang=spa">
-                    <img class="image" src="img/aa050725f5b307b55787c651abeca8ee.jpg" height="250" width="403" alt="">
+                    <img class="image" src="img/aa050725f5b307b55787c651abeca8ee.jpg" height="200" width="403" alt="">
                     <div class="apretar">
                       Solo debes apretar la imagen para ver mas; dale!
                     </div>
@@ -286,7 +296,7 @@
               <li>
                 <div class="raya">
                   <a href="https://www.lds.org/?lang=spa">
-                    <img class="image" src="img/tumblr_static_bmtzy5a7nnk0woskgsgg0wc40.png" height="250" width="300" alt="">
+                    <img class="image" src="img/tumblr_static_bmtzy5a7nnk0woskgsgg0wc40.png" height="200" width="300" alt="">
                     <div class="apretar">
                       Solo debes apretar la imagen para ver mas; dale!
                     </div>
@@ -299,6 +309,47 @@
       </div>
     </div>    
   </section>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <nav class="numeros">
+            <ul class="pagination">
+              <li>
+                <a href="#" aria-label="Previous">
+                  <span aria-hidden="true">&laquo;</span>
+                </a>
+              </li>
+              <li><a href="#">1</a></li>
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">4</a></li>
+              <li><a href="#">5</a></li>
+              <li>
+                <a href="#" aria-label="Next">
+                  <span aria-hidden="true">&raquo;
+                  </span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="final">
+            <h4 class="fin">
+              Valita_i Company; Alguno derechos reservados.
+            </h4>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
